adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente velit sequi minima blanditiis distinctio hic accusantium suscipit quas dolore deserunt optio qui fuga illo, rerum omnis ipsum excepturi impedit quae.</p>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ullam voluptates sequi inventore? Tempora delectus dignissimos voluptatem. Quidem vero maiores officiis, veniam exercitationem consectetur officia eos aspernatur porro! Fuga, possimus?</p>
 </body>
 </html>
